# skeleton

./: .gitignore  README.md  com.github.jeremypw.skeleton.yaml  meson.build
data/: gresource.xml  gschema.xml  meson.build  skeleton.desktop.in  skeleton.metainfo.xml.in
po/: LINGUAS  POTFILES  com.github.jeremypw.skeleton.pot  de.po  en.po  en_GB.po  fr_FR.po
src/: Application.vala
